name:                yesod-filter
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/yesod-filter#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2020 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Yesod.Filter.TH
                       Yesod.Filter.Read
                       Yesod.Filter.Internal
  other-modules:       Yesod.Filter.Builder
                       Yesod.Filter.Types
  build-depends:       base >= 4.7 && < 5
                     , persistent
                     , template-haskell
                     , text
                     , time
                     , yesod-core
                     , yesod-persistent
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/yesod-filter
